--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
 <header>
-     <a href="#" class="logo">Ecommerce<span>.</span></a>
+     <a href="#" class="logo">Food<span>.</span></a>
 	 <div class="menuToggle" onclick="toggleMenu()"></div>
 	 <ul class="navigation">
         <li> <li><a class="nav-link" href="about.html">About</a></li></li>
