--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			      <img src="images/menu1.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Tv</h3>
+			   <h3>Special Soup</h3>
 			</div>
 	   </div>
 	   <div class="box">
@@ -71,7 +71,7 @@
 			      <img src="images/menu2.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Computer</h3>
+			   <h3>Special Salad</h3>
 			</div>
 	   </div>
 	   <div class="box">
@@ -79,7 +79,7 @@
 			      <img src="images/menu3.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Laptop</h3>
+			   <h3>Special Salad</h3>
 			</div>
 	   </div>
 	    <div class="box">
@@ -87,7 +87,7 @@
 			      <img src="images/menu4.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Laptop</h3>
+			   <h3>Special Pasta</h3>
 			</div>
 	   </div>
 	    <div class="box">
@@ -95,7 +95,7 @@
 			      <img src="images/menu5.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Laptop</h3>
+			   <h3>Special Salad</h3>
 			</div>
 	   </div>
 	    <div class="box">
@@ -103,7 +103,7 @@
 			      <img src="images/menu6.jpg" alt="">
 			</div>
 			<div class="text">
-			   <h3>Special Laptop</h3>
+			   <h3>Special Soup</h3>
 			</div>
 	   </div>
        <div class="title">
